--- a/tmk_keyboard/.gitignore
+++ b/tmk_keyboard/.gitignore
@@ -1,3 +1,19 @@
+orphan
+alps64
+gh60
+hbkb
+hhkb
+infinity
+infinity_chibios
+mbed_onekey
+onekey
+stm32_f072_onekey
+stm32_f103_onekey
+teensy_lc_onekey
+
+
+
+
 .dep
 *.o
 *.eep
