--- a/PCB/NumPad-MUSB/GerberAImport4SL6.ini
+++ b/PCB/NumPad-MUSB/GerberAImport4SL6.ini
@@ -1,5 +1,5 @@
 [config]
-path=G:\home\Documents\Projects\EAGLE\Keyboard\NumPad-MUSB\gerber\
+path=G:\home\Documents\Projects\EAGLE\Keyboard\PCB\NumPad-MUSB\gerber\
 pref=NumPad.
 cooperTop=TopCopper.grb
 Cooper3=
