--- a/PCB/keyBoard_B/GerberAImport4SL6.ini
+++ b/PCB/keyBoard_B/GerberAImport4SL6.ini
@@ -1,6 +1,6 @@
 [config]
-path=G:\home\Documents\Projects\EAGLE\Keyboard\gerber\
-pref=Keyboard.
+path=G:\home\Documents\Projects\EAGLE\Keyboard\PCB\keyBoard_B\gerber\
+pref=keyBoard_B.
 cooperTop=TopCopper.grb
 Cooper3=
 Cooper4=
