--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-git.txt
+﻿git.txt
 
 
 key-size.ods
@@ -7,6 +7,12 @@ key-size.ods
 backup/
 local/
 old/
+
+AvrUSB500_by_Petka_HEX_SRC_v8_uni
+
+
+
+
 
 b.bat
 
