--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 ﻿git.txt
+def.hex
+NumPad_lay.dat
 
 
 key-size.ods
@@ -9,7 +11,7 @@ local/
 old/
 
 AvrUSB500_by_Petka_HEX_SRC_v8_uni
-
+Autoit
 
 
 
